<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Preparo</string>
    <string name="action_settings">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile">Dein Profil</string>
    <string name="navigator">Navigator</string>
    <string name="theme">Themenmarktplatz</string>
    <string name="scan">Scanner</string>
    <string name="application">Deine Bewerbungen</string>
    <string name="message">Nachrichten</string>
    <string name="setting">Einstellungen</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="email">E-mail</string>
    <string name="password">Passwort</string>
    <string name="loginWithFacebook">Einloggen mit Facebook</string>
    <string name="foto">Foto hinzufügen</string>
    <string name="name">Name</string>
    <string name="firstname">Vorname</string>
    <string name="username">Username</string>
    <string name="passwordAgain">Passwort wiederholen</string>
    <string name="signup">Registrierung abschließen</string>
    <string name="dont">Register a free account</string>
    <string name="activity_qualification">Qualification</string>
    <string name="activity_signup">Signup</string>
<string name="or">or</string> 
<string name="ok">Ok</string> 
<string name="cancel">Cancel</string> 

<string name="save">Save</string> 
<string name="edit">Edit</string> 
<string name="doneSignUp">Congratulation!! You have successfully signup. Please Login. </string>
<string name="errorSignUp">Error occured. Please fill up the details again. </string>
<string name="errorSignUpPassword">Password does not match</string>
 
<!-- For competence dialog --> 
<string name="yes">Yes</string> 
<string name="no">No</string>
<string name="sure">Do you want to remove this?</string>
<string name="titleCompetence">Delete Competence</string>   
<!-- For competence dialog --> 

<!-- For Qualification dialog --> 
<string name="titleQualification">Delete Qualification</string>   
<!-- For competence dialog --> 

<string name="toastQualification">Please enter the valid data</string>  


 <string name="newPosition">Neue Qaulification hinzufügen</string>
 <string name="newInstitute">Institute</string>
 <string name="newCity">City</string>
 <string name="newStreet">Address</string>
 <string name="newZipCode">Zipcode</string>
 <string name="von">Von</string>
 <string name="bis">Bis</string>
  <string name="newDegree">Name of the degree ex. B.Sc.</string>
   <string name="timeHint">YYYY-MM-DD</string>
   <string name="newInstituteName">Name of the institute</string>
   
   <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
      <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Profile</item>
        <item >Navigator</item>
        <item >Themenmarktplatz</item>
        <item >Scanner</item>
        <item >Deine Bewerbungen</item>
        <item >Nachrichten</item>
        <item >Einstellung</item>
        
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
      <item >@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_navigator</item>
        <item>@drawable/ic_theme</item>
        <item>@drawable/ic_scanner</item>
        <item>@drawable/ic_application</item>
        <item>@drawable/ic_message</item>
        <item>@drawable/ic_setting</item>
    </array>
    
     <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
    <!-- for qualification -->
    <string name="profile_qualification">Qualification</string>
    
    <string-array name="profile_header_items">
        <item>Qualification</item>
         <item>Competence</item>
         <item>Experience</item>
    </string-array>
</resources>