<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                tools:context=".LinearLayout" 
                android:background="#F2F2F2"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                >
     <!--         
                      <ImageView
    android:id="@+id/profileView"
    android:layout_width="150dp"
    android:layout_height="130dp"
    android:src="@drawable/no_profile" 
    android:layout_marginLeft="100dp"
    android:layout_marginRight="80dp"
    android:layout_marginTop="10dp"
    android:cropToPadding="true"
    />

<TextView
    android:id="@+id/profileViewText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/profileView"
    android:layout_alignRight="@+id/profileView"
    android:layout_alignBottom="@+id/profileView"
    android:gravity="center"
    android:text="Edit"
    android:textColor="#000000"
    android:background="#7F000000" 
  />
   -->  
<EditText
android:id="@+id/signUpName"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/backedittext"
android:hint="@string/name"
android:padding="10dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:layout_marginTop="20dp"
android:inputType="text"
/>

<EditText
android:id="@+id/signUpFirstName"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/backedittext"
android:hint="@string/firstname"
android:padding="10dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:layout_marginTop="20dp"
android:layout_below="@+id/signUpName"
android:inputType="text"
/>

<EditText
android:id="@+id/signUpUsername"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/backedittext"
android:hint="@string/username"
android:padding="10dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:layout_marginTop="20dp"
android:layout_below="@+id/signUpFirstName"
/>

<EditText
android:id="@+id/signUpEmail"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/backedittext"
android:hint="@string/email"
android:padding="10dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:layout_marginTop="20dp"
android:layout_below="@+id/signUpUsername"
android:inputType="textEmailAddress"
/>

<EditText
android:id="@+id/signUpPassword"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/backedittext"
android:hint="@string/password"
android:padding="10dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:layout_marginTop="20dp"
android:layout_below="@+id/signUpEmail"
android:inputType="textPassword"

/>

<EditText
android:id="@+id/signUpPasswordAgain"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:background="@drawable/backedittext"
android:hint="@string/passwordAgain"
android:padding="10dp"
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:layout_marginTop="20dp"
android:layout_below="@+id/signUpPassword"
android:inputType="textPassword"
/>

<Button
 android:id="@+id/signUpButton"   
 android:layout_width="fill_parent"
 android:layout_height="wrap_content"
 android:layout_gravity="center"
 android:padding="10dp"
 android:text="@string/signup" 
 android:layout_marginTop="15dp"
 android:layout_marginLeft="25dp"
 android:layout_marginRight="25dp"
 android:background="@drawable/button_custom"
 android:layout_below="@+id/signUpPasswordAgain"
 />
            </RelativeLayout>